# GPT_DB

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  agent-memory.ipynb  agent_ver2.py  checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  docker-compose.yaml  main.py  prompts.py  pyproject.toml  requirements.txt  rpc.py  run_service.py  test_client.py
gpt_db/: adding_txt_fields.py  agent.py  config.py  main.py  rabbitmq.py  rabbitmq_communicator.py  restriction_for_sql.py  search_by_referenses.py  search_by_structure_of_table.py  search_of_near_vectors.py  smart_search.py
gpt_db/data/: authority.csv  authority.db  checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  data_for_train.py  data_for_train_1.csv  data_for_train_1.jsonl  data_for_train_1.py  data_for_train_to_csv.py  data_for_train_to_jsonl.py  extract_words.py  fill_authority_db.py  fill_referenses_db.py  Дивизионы.xlsx
gpt_db/data/confs/: TYPE_ORDER.csv  ZCFO1.csv  ZPROD_CAT.csv  config.yaml  confs.json  divisions.txt  industry.csv  industry.cvs  instruction_sql.txt  otgruzki_structure.txt  otgruzki_structure.yaml  reltype.csv  reltype.cvs  vbrk_zzpernr_zm.csv  vbrk_zzpernr_zm.cvs  zcfo.cvs  zcustomer_just1000rows.csv  zdiv.csv  zprodh01.csv  zprodh11.csv  zprodh21.csv  zprodh31.csv
gpt_db/data/confs/csv/: BPKIND.csv  CLASSIFIC.csv  RLTYP.csv  VBRK_ZZPERNR_ZM.csv  ZCFO1.csv  ZCUSTOMER.csv  ZDIV.csv  ZPRODH01.csv  ZPRODH21.csv  ZPRODH31.csv  data_for_train.csv
gpt_db/data/dialogs_cash/: 1.json  history.json  history_base.json
