[project]
name = "gpt-db"
version = "0.1.0"
description = ""
authors = [
    {name = "Сковорода Виталий Николаевич",email = "skovoroda@spk.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "gigachat (>=0.1.37.post1,<0.2.0)",
    "sqlparse (>=0.5.3,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
