[project]
name = "gpt-db"
version = "0.1.0"
description = ""
authors = [
    {name = "Сковорода Виталий Николаевич",email = "skovoroda@spk.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "gigachat (>=0.1.37.post1,<0.2.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "langchain-gigachat (>=0.3.8,<0.4.0)",
    "langgraph (>=0.3.20,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
