[project]
name = "gpt-db"
version = "0.1.0"
description = ""
authors = [
    {name = "Сковорода Виталий Николаевич",email = "skovoroda@spk.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "gigachat (>=0.1.37.post1,<0.2.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "langchain-gigachat (>=0.3.8,<0.4.0)",
    "langgraph (>=0.3.20,<0.4.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-core (>=0.3.51,<0.4.0)",
    "sqlglot (>=26.14.0,<27.0.0)",
    "langgraph-checkpoint-sqlite (>=2.0.6,<3.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "sqlite-vec (>=0.1.6,<0.2.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "langchain-google-genai (>=2.1.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
